[build-system]
requires = ["setuptools>42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["dmc2gym"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
markers = "expensive: mark a test as expensive (deselect with `-m` 'not expensive)"